# Phlogiston

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
docker/: deploy_gbt.sh  sync_data_from_old.sh
docs/: active_learning.md  pipeline.md
phlogiston/: __init__.py  cli.py  config.py
phlogiston/data/: __init__.py  dataset.py  gnome.py  graph.py  materials_project.py  precompute.py  properties.py  synth.py
phlogiston/discovery/: __init__.py  feasibility.py  loop.py  novelty.py  rank.py  screen.py  umlip_gate.py
phlogiston/layers/: README.md  __init__.py  spherical.md  spherical.py
phlogiston/layers/docs/: embedding.md  gate.md  interaction.md  (+5 more)
phlogiston/models/: README.md  __init__.py
phlogiston/train/: DESIGN.md  __init__.py  cdvae_trainer.py  distill.py  ema.py  feedback.py  synth_trainer.py  trainer.py
phlogiston/verify/: DESIGN.md  __init__.py  ensemble.py  hull.py  phonons.py  potential.py  relax.py  verify.py
scripts/: bootstrap_from_scratch.sh  cond_compare.py  diagnose_cdvae.py  eval_drift.py  launch_flywheel.sh  restart_consistency.sh  run_flywheel.sh  sweep.py  validate_graph.py  validate_sampler_fix.py  verify_potential.py  verify_probe.py  verify_relax.py
tests/: equivariance.py  test_cdvae.py  test_cdvae_decoder.py  test_cdvae_diffusion.py  test_cdvae_encoder.py  test_cdvae_layers.py  test_cdvae_sampler.py  test_discovery.py  test_embedding.py  test_encoder.py  test_gate.py  test_interaction.py  test_linear.py  test_predictor.py  test_radial.py  test_readout.py  test_spherical.py
(+27 files in other folders)
