[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phlogiston"
version = "0.1.0"
description = "A crystal-structure ML framework for materials discovery (GNoME + Materials Project)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26,<2.2",
    "pandas>=2.1",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "pymatgen>=2024.5.1",
    "mp-api>=0.41.2",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]

[project.scripts]
phlogiston = "phlogiston.cli:main"

[tool.setuptools.packages.find]
include = ["phlogiston*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]  # long comments/strings are fine; the formatter handles code

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # re-exports
